fixed mobile layout issues

--- a/src/components/css/Catalog.css
+++ b/src/components/css/Catalog.css
@@ -8,3 +8,7 @@
   flex: 1 100%;
   flex-wrap: wrap;
 }
+
+.catalog-sidebar {
+  display: flex;
+}
